--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+ <meta charset="UTF-8" />
+ <title>My Portfolio</title>
+</head>
+<body>
 
+  <h1>My Portfolio</h1>
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="extra.html">Extra</a></li>
+    </ul>
+  </nav>
+
+  <h2>Projects</h2>
+  <ul>
+    <li><a href="project1.html">Project 1</a></li>
+    <li><a href="project2.html">Project 2</a></li>
+    <li><a href="project3.html">Project 3</a></li>
+    <li><a href="project4.html">Project 4</a></li>
+    <li><a href="project5.html">Project 5</a></li>
+    <li><a href="project6.html">Project 6</a></li>
+    <li><a href="project7.html">Project 7</a></li>
+  </ul>
+
+  <p>
+    This is the home page for my portfolio. Use the links above to explore my projects and learn more about me.
+  </p>
+</body>
+
+</html>
