--- a/extra.html
+++ b/extra.html
@@ -1,1 +1,49 @@
+<!DOCTYPE html>
+
+<html lang="en">
+
+<head>
+
+  <meta charset="UTF-8" />
+
+  <title>Extra – My Portfolio</title>
+
+</head>
+
+<body>
+
+  <nav>
+
+    <ul>
+
+      <li><a href="index.html">Home</a></li>
+
+      <li><a href="about.html">About</a></li>
+
+      <li><a href="extra.html">Extra</a></li>
+
+    </ul>
+
+  </nav>
+
+
+  <h1>Extra Page</h1>
+
+
+  <h2>Reflections</h2>
+
+  <p>
+
+    Use this page however you like. For example, write reflections on what
+
+    you’ve learned in this class, show work from another class, or paste in a
+
+    simple CV.
+
+  </p>
+
+</body>
+
+</html>
+
 
