--- a/project2.html
+++ b/project2.html
@@ -1,1 +1,56 @@
+<!DOCTYPE html>
 
+<html lang="en">
+
+<head>
+
+  <meta charset="UTF-8" />
+
+  <title>Project 2 – My Portfolio</title>
+
+</head>
+
+<body>
+
+  <nav>
+
+    <ul>
+
+      <li><a href="index.html">Home</a></li>
+
+      <li><a href="about.html">About</a></li>
+
+      <li><a href="extra.html">Extra</a></li>
+
+    </ul>
+
+  </nav>
+
+
+  <h1>Project 2 Title</h1>
+
+
+  <h2>p5.js Sketch</h2>
+
+ 
+
+  <div>
+
+  
+
+  </div>
+
+
+  <h2>Description</h2>
+
+  <p>
+
+    This is a 1–2 sentence description of Project 1. Describe what it does,
+
+    what you were exploring, or what you learned.
+
+  </p>
+
+</body>
+
+</html>
