--- a/extra.html
+++ b/extra.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8" />
 
   <title>Extra – My Portfolio</title>
-
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
