--- a/project4.html
+++ b/project4.html
@@ -7,6 +7,7 @@
   <meta charset="UTF-8" />
 
   <title>Project 4 – My Portfolio</title>
+    <link rel="stylesheet" href="style.css" />
 
 </head>
 
