--- a/project1.html
+++ b/project1.html
@@ -6,7 +6,7 @@
 
   <meta charset="UTF-8" />
 
-  <title>Project 1 – My Portfolio</title>
+  <title>Lost and Found – My Portfolio</title>
     <link rel="stylesheet" href="style.css" />
 
 </head>
@@ -28,7 +28,7 @@
   </nav>
 
 
-  <h1>Project 1 Title</h1>
+  <h1>Lost and Found</h1>
 
 
   <h2>p5.js Sketch</h2>
