--- a/project2.html
+++ b/project2.html
@@ -6,7 +6,7 @@
 
   <meta charset="UTF-8" />
 
-  <title>Project 2 – My Portfolio</title>
+  <title>Peko – My Portfolio</title>
     <link rel="stylesheet" href="style.css" />
 
 </head>
@@ -28,7 +28,7 @@
   </nav>
 
 
-  <h1>Project 2 Title</h1>
+  <h1>Peko</h1>
 
 
   <h2>p5.js Sketch</h2>
