--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
   <h2>Projects</h2>
   <ul>
-    <li><a href="project1.html">Project 1</a></li>
-    <li><a href="project2.html">Project 2</a></li>
+    <li><a href="project1.html">Lost and Found</a></li>
+    <li><a href="project2.html">Peko</a></li>
     <li><a href="project3.html">Project 3</a></li>
     <li><a href="project4.html">Project 4</a></li>
     <li><a href="project5.html">Project 5</a></li>
