--- a/project3.html
+++ b/project3.html
@@ -6,7 +6,7 @@
 
   <meta charset="UTF-8" />
 
-  <title>Project 3 – My Portfolio</title>
+  <title>Spine Disk Clock – My Portfolio</title>
     <link rel="stylesheet" href="style.css" />
 
 </head>
@@ -28,7 +28,7 @@
   </nav>
 
 
-  <h1>Project 3 Title</h1>
+  <h1>Spine Disk Clock</h1>
 
 
   <h2>p5.js Sketch</h2>
