--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <ul>
     <li><a href="project1.html">Lost and Found</a></li>
     <li><a href="project2.html">Peko</a></li>
-    <li><a href="project3.html">Project 3</a></li>
-    <li><a href="project4.html">Project 4</a></li>
+    <li><a href="project3.html">Spine Disk Clock</a></li>
+    <li><a href="project4.html">Frankenstein's Zombiant</a></li>
     <li><a href="project5.html">Project 5</a></li>
     <li><a href="project6.html">Project 6</a></li>
     <li><a href="project7.html">Project 7</a></li>
