--- a/project1.html
+++ b/project1.html
@@ -8,6 +8,9 @@
 
   <title>Lost and Found – My Portfolio</title>
     <link rel="stylesheet" href="style.css" />
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/p5.js"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/addons/p5.sound.min.js"></script>
 
 </head>
 
