--- a/project5.html
+++ b/project5.html
@@ -6,7 +6,7 @@
 
   <meta charset="UTF-8" />
 
-  <title>Project 5 – My Portfolio</title>
+  <title>Hand Flowers – My Portfolio</title>
     <link rel="stylesheet" href="style.css" />
 
 </head>
@@ -28,7 +28,7 @@
   </nav>
 
 
-  <h1>Project 5 Title</h1>
+  <h1>Hand Flowers</h1>
 
 
   <h2>p5.js Sketch</h2>
