--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <li><a href="project2.html">Peko</a></li>
     <li><a href="project3.html">Spine Disk Clock</a></li>
     <li><a href="project4.html">Frankenstein's Zombiant</a></li>
-    <li><a href="project5.html">Project 5</a></li>
-    <li><a href="project6.html">Project 6</a></li>
-    <li><a href="project7.html">Project 7</a></li>
+    <li><a href="project5.html">Hand Flowers</a></li>
+    <li><a href="project6.html">Anxiety Rings</a></li>
+    <li><a href="project7.html">COOKIE-ISM</a></li>
   </ul>
 
   <p>
