--- a/project6.html
+++ b/project6.html
@@ -6,7 +6,7 @@
 
   <meta charset="UTF-8" />
 
-  <title>Project 6 – My Portfolio</title>
+  <title>Anxiety Rings– My Portfolio</title>
     <link rel="stylesheet" href="style.css" />
 
 </head>
@@ -28,7 +28,7 @@
   </nav>
 
 
-  <h1>Project 6 Title</h1>
+  <h1>Anxiety Rings</h1>
 
 
   <h2>p5.js Sketch</h2>
