--- a/project7.html
+++ b/project7.html
@@ -6,7 +6,7 @@
 
   <meta charset="UTF-8" />
 
-  <title>Project 7 – My Portfolio</title>
+  <title>COOKIE-ISM – My Portfolio</title>
     <link rel="stylesheet" href="style.css" />
 
 </head>
@@ -28,7 +28,7 @@
   </nav>
 
 
-  <h1>Project 7 Title</h1>
+  <h1>COOKIE-ISM</h1>
 
 
   <h2>p5.js Sketch</h2>
