--- a/project2.html
+++ b/project2.html
@@ -8,6 +8,9 @@
 
   <title>Peko – My Portfolio</title>
     <link rel="stylesheet" href="style.css" />
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/p5.js"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/addons/p5.sound.min.js"></script>
 
 </head>
 
@@ -35,16 +38,7 @@
 
  
 
-  <div>
-<iframe 
-      src="https://editor.p5js.org/eva.z/full/LV4rLd_jh"
-      width="400"
-      height="400"
-      style="border: none;"
-    ></iframe>
-  
-
-  </div>
+  <div id="sketch-container"></div>
 
 
   <h2>Description</h2>
