--- a/project3.html
+++ b/project3.html
@@ -8,6 +8,9 @@
 
   <title>Spine Disk Clock – My Portfolio</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/p5.js"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/addons/p5.sound.min.js"></script>
 
 </head>
 
@@ -35,23 +38,9 @@
 
  
 
-  <div>
- <iframe 
+   <!-- Canvas will appear here -->
 
-     src="https://editor.p5js.org/eva.z/full/Vsp9BVKVW"
-
-      width="600"
-
-      height="600"
-
-      style="border: none;"
-
-    ></iframe>
-
-
-  
-
-  </div>
+    <div id="sketch-container"></div>
 
 
   <h2>Description</h2>
