--- a/project4.html
+++ b/project4.html
@@ -8,6 +8,11 @@
 
   <title>Project 4 – My Portfolio</title>
     <link rel="stylesheet" href="style.css" />
+   <!-- p5.js libraries -->
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/p5.js"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/addons/p5.sound.min.js"></script>
 
 </head>
 
@@ -35,23 +40,10 @@
 
  
 
-  <div>
-<iframe 
 
-      src="https://editor.p5js.org/eva.z/full/uBoKeDpuQ"
+    <!-- Canvas will appear here -->
 
-      width="400"
-
-      height="600"
-
-      style="border: none;"
-
-    ></iframe>
-
-
-  
-
-  </div>
+    <div id="sketch-container"></div>
 
 
   <h2>Description</h2>
