--- a/project5.html
+++ b/project5.html
@@ -8,6 +8,11 @@
 
   <title>Hand Flowers – My Portfolio</title>
     <link rel="stylesheet" href="style.css" />
+    <!-- p5.js libraries -->
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/p5.js"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/addons/p5.sound.min.js"></script>
 
 </head>
 
@@ -34,23 +39,9 @@
   <h2>p5.js Sketch</h2>
 
  
+   <!-- Canvas will appear here -->
 
-  <div>
- <iframe 
-
-      src="https://editor.p5js.org/eva.z/full/gjrWXcMbA"
-
-      width="600"
-
-      height="1200"
-
-      style="border: none;"
-
-    ></iframe>
-
-
-  </div>
-
+    <div id="sketch-container"></div>
 
   <h2>Description</h2>
 
