--- a/project6.html
+++ b/project6.html
@@ -8,6 +8,9 @@
 
   <title>Anxiety Rings– My Portfolio</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/p5.js"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/addons/p5.sound.min.js"></script>
 
 </head>
 
@@ -35,24 +38,10 @@
 
  
 
-  <div>
-<iframe 
+    <!-- Canvas will appear here -->
 
-      src="https://editor.p5js.org/eva.z/full/7XqzSr7rj"
+    <div id="sketch-container"></div>
 
-      width="600"
-
-      height="600"
-
-      style="border: none;"
-
-    ></iframe>
-
-
-
-  
-
-  </div>
 
 
   <h2>Description</h2>
