--- a/project7.html
+++ b/project7.html
@@ -8,6 +8,13 @@
 
   <title>COOKIE-ISM – My Portfolio</title>
     <link rel="stylesheet" href="style.css" />
+  <!-- p5.js libraries -->
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/p5.js"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/addons/p5.sound.min.js"></script>
+
+
 
 </head>
 
@@ -35,24 +42,9 @@
 
  
 
-  <div>
-<iframe 
+  <!-- Canvas will appear here -->
 
-      src="https://editor.p5js.org/eva.z/full/PWMXp2xbj"
-
-      width="600"
-
-      height="400"
-
-      style="border: none;"
-
-    ></iframe>
-
-
-
-  
-
-  </div>
+    <div id="sketch-container"></div>
 
 
   <h2>Description</h2>
