--- a/project6.html
+++ b/project6.html
@@ -37,12 +37,19 @@
   <h2>p5.js Sketch</h2>
 
  
+<div><iframe 
 
-    <!-- Canvas will appear here -->
+      src="https://editor.p5js.org/eva.z/full/7XqzSr7rj"
 
-    <div id="sketch-container"></div>
+      width="400"
 
+      height="400"
 
+      style="border: none;"
+
+    ></iframe>
+
+</div>
 
   <h2>Description</h2>
 
