--- a/project7.html
+++ b/project7.html
@@ -42,10 +42,18 @@
 
  
 
-  <!-- Canvas will appear here -->
+<div>
+  <iframe 
 
-    <div id="sketch-container"></div>
+      src="https://editor.p5js.org/eva.z/full/PWMXp2xbj"
+      width="400"
 
+      height="400"
+
+      style="border: none;"
+
+    ></iframe>
+</div>
 
   <h2>Description</h2>
 
