--- a/index.html
+++ b/index.html
@@ -27,9 +27,18 @@
     <li><a href="project7.html">COOKIE-ISM</a></li>
   </ul>
 
-  <p>
-    This is the home page for my portfolio. Use the links above to explore my projects and learn more about me.
-  </p>
+ 
+ <footer>
+        <p><small>2025 Yifan Eva Zhang. All rights reserved.</small></p>
+        <address>
+Contact: yifanezhang@gmail.com <br>
+Social Media: 
+Instagram: @_ezzzart_<br>
+LinkedIn: Yifan Eva Zhang<br>
+</address>
+    </footer>
+    </body>
+</html>
 </body>
 
 </html>
