--- a/index.html
+++ b/index.html
@@ -1,42 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <meta charset="UTF-8" />
- <title>My Portfolio</title>
-   <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8" />
+  <title>My Portfolio</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
 
-  <h1>My Portfolio</h1>
-  <nav>
+  <header id="top-header">
+
+    <div class="header-top">
+      My Portfolio
+    </div>
+
+    <nav id="main-nav">
+      <ul>
+        <li><a href="index.html" class="active-link">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="extra.html">Extra</a></li>
+      </ul>
+    </nav>
+
+  </header>
+
+  <main>
+
+    <h2>Projects</h2>
+
     <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="extra.html">Extra</a></li>
+      <li><a href="project1.html">Lost and Found</a></li>
+      <li><a href="project2.html">Peko</a></li>
+      <li><a href="project3.html">Spine Disk Clock</a></li>
+      <li><a href="project4.html">Frankenstein's Zombiant</a></li>
+      <li><a href="project5.html">Hand Flowers</a></li>
+      <li><a href="project6.html">Anxiety Rings</a></li>
+      <li><a href="project7.html">COOKIE-ISM</a></li>
     </ul>
-  </nav>
 
-  <h2>Projects</h2>
-  <ul>
-    <li><a href="project1.html">Lost and Found</a></li>
-    <li><a href="project2.html">Peko</a></li>
-    <li><a href="project3.html">Spine Disk Clock</a></li>
-    <li><a href="project4.html">Frankenstein's Zombiant</a></li>
-    <li><a href="project5.html">Hand Flowers</a></li>
-    <li><a href="project6.html">Anxiety Rings</a></li>
-    <li><a href="project7.html">COOKIE-ISM</a></li>
-  </ul>
+  </main>
 
- 
- <footer>
-        <p><small>2025 Yifan Eva Zhang. All rights reserved.</small></p>
-        <address>
-Contact: yifanezhang@gmail.com <br>
-Social Media: 
-Instagram: @_ezzzart_<br>
-LinkedIn: Yifan Eva Zhang<br>
-</address>
-    </footer>
-    </body>
+  <footer>
+    <p><small>2025 Yifan Eva Zhang. All rights reserved.</small></p>
+    <address>
+      Contact: yifanezhang@gmail.com <br>
+      Social Media: <br>
+      Instagram: @_ezzzart_ <br>
+      LinkedIn: Yifan Eva Zhang<br>
+    </address>
+  </footer>
+
+</body>
 </html>
-
