--- a/project1.html
+++ b/project1.html
@@ -1,54 +1,42 @@
 <!DOCTYPE html>
-
 <html lang="en">
 
 <head>
-
   <meta charset="UTF-8" />
-
   <title>Lost and Found – My Portfolio</title>
-    <link rel="stylesheet" href="style.css" />
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/p5.js"></script>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/addons/p5.sound.min.js"></script>
-
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
 
   <nav>
-
     <ul>
-
       <li><a href="index.html">Home</a></li>
-
       <li><a href="about.html">About</a></li>
-
       <li><a href="extra.html">Extra</a></li>
-
     </ul>
-
   </nav>
-
 
   <h1>Lost and Found</h1>
 
-
   <h2>p5.js Sketch</h2>
 
- 
-   <div id="sketch-container"></div>
+  <!-- ✅ Your live p5.js sketch -->
+  <iframe
+    src="https://editor.p5js.org/eva.z/full/S8nB42KBM"
+    width="800"
+    height="500"
+    loading="lazy"
+    allowfullscreen>
+  </iframe>
 
   <h2>Description</h2>
 
   <p>
-
-    This is a 1–2 sentence description of Project 1. Describe what it does,
-
-    what you were exploring, or what you learned.
-
+    This project explores loss and rediscovery through interactive motion
+    and generative behavior in p5.js. Users influence the composition through
+    direct interaction with the canvas.
   </p>
-<script src="project1.js"></script>
-</body>
 
+</body>
 </html>
