--- a/project3.html
+++ b/project3.html
@@ -1,58 +1,42 @@
 <!DOCTYPE html>
-
 <html lang="en">
 
 <head>
-
   <meta charset="UTF-8" />
-
   <title>Spine Disk Clock – My Portfolio</title>
-    <link rel="stylesheet" href="style.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/p5.js"></script>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/addons/p5.sound.min.js"></script>
-
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
 
   <nav>
-
     <ul>
-
       <li><a href="index.html">Home</a></li>
-
       <li><a href="about.html">About</a></li>
-
       <li><a href="extra.html">Extra</a></li>
-
     </ul>
-
   </nav>
-
 
   <h1>Spine Disk Clock</h1>
 
-
   <h2>p5.js Sketch</h2>
 
- 
-
-   <!-- Canvas will appear here -->
-
-    <div id="sketch-container"></div>
-
+  
+  <iframe
+    src="https://editor.p5js.org/eva.z/full/Vsp9BVKVW"
+    width="800"
+    height="500"
+    loading="lazy"
+    allowfullscreen>
+  </iframe>
 
   <h2>Description</h2>
 
   <p>
-
-    This is a 1–2 sentence description of Project 1. Describe what it does,
-
-    what you were exploring, or what you learned.
-
+    This generative clock visualizes time through the metaphor of spinal motion,
+    using rotation and rhythmic spacing to express the passage of hours, minutes,
+    and seconds in an anatomical form.
   </p>
-<script src="project3.js"></script>
-</body>
 
+</body>
 </html>
