--- a/project4.html
+++ b/project4.html
@@ -1,61 +1,41 @@
 <!DOCTYPE html>
-
 <html lang="en">
 
 <head>
-
   <meta charset="UTF-8" />
-
   <title>Project 4 – My Portfolio</title>
-    <link rel="stylesheet" href="style.css" />
-   <!-- p5.js libraries -->
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/p5.js"></script>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/addons/p5.sound.min.js"></script>
-
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
 
   <nav>
-
     <ul>
-
       <li><a href="index.html">Home</a></li>
-
       <li><a href="about.html">About</a></li>
-
       <li><a href="extra.html">Extra</a></li>
-
     </ul>
-
   </nav>
-
 
   <h1>Project 4 Title</h1>
 
-
   <h2>p5.js Sketch</h2>
 
- 
 
-
-    <!-- Canvas will appear here -->
-
-    <div id="sketch-container"></div>
-
+  <iframe
+    src="https://editor.p5js.org/eva.z/full/uBoKeDpuQ"
+    width="800"
+    height="500"
+    loading="lazy"
+    allowfullscreen>
+  </iframe>
 
   <h2>Description</h2>
 
   <p>
-
-    This is a 1–2 sentence description of Project 1. Describe what it does,
-
-    what you were exploring, or what you learned.
-
+    This project explores generative form and system-based motion through
+    p5.js, focusing on how simple rules can produce complex visual behavior.
   </p>
-<script src="project4.js"></script>
-</body>
 
+</body>
 </html>
