--- a/project6.html
+++ b/project6.html
@@ -1,66 +1,41 @@
 <!DOCTYPE html>
-
 <html lang="en">
 
 <head>
-
   <meta charset="UTF-8" />
-
-  <title>Anxiety Rings– My Portfolio</title>
-    <link rel="stylesheet" href="style.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/p5.js"></script>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/addons/p5.sound.min.js"></script>
-
+  <title>Anxiety Rings – My Portfolio</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
 
   <nav>
-
     <ul>
-
       <li><a href="index.html">Home</a></li>
-
       <li><a href="about.html">About</a></li>
-
       <li><a href="extra.html">Extra</a></li>
-
     </ul>
-
   </nav>
-
 
   <h1>Anxiety Rings</h1>
 
-
   <h2>p5.js Sketch</h2>
 
- 
-<div><iframe 
-
-      src="https://editor.p5js.org/eva.z/full/7XqzSr7rj"
-
-      width="400"
-
-      height="400"
-
-      style="border: none;"
-
-    ></iframe>
-
-</div>
+  <iframe
+    src="https://editor.p5js.org/eva.z/full/7XqzSr7rj"
+    width="800"
+    height="500"
+    loading="lazy"
+    allowfullscreen>
+  </iframe>
 
   <h2>Description</h2>
 
   <p>
-
-    This is a 1–2 sentence description of Project 1. Describe what it does,
-
-    what you were exploring, or what you learned.
-
+    This project visualizes nervous energy and repetitive motion through
+    interactive, concentric behaviors in p5.js, mapping subtle user input
+    to cycles of tension and release.
   </p>
 
 </body>
-
 </html>
