--- a/project7.html
+++ b/project7.html
@@ -1,70 +1,42 @@
 <!DOCTYPE html>
-
 <html lang="en">
 
 <head>
-
   <meta charset="UTF-8" />
-
   <title>COOKIE-ISM – My Portfolio</title>
-    <link rel="stylesheet" href="style.css" />
-  <!-- p5.js libraries -->
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/p5.js"></script>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/addons/p5.sound.min.js"></script>
-
-
-
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
 
   <nav>
-
     <ul>
-
       <li><a href="index.html">Home</a></li>
-
       <li><a href="about.html">About</a></li>
-
       <li><a href="extra.html">Extra</a></li>
-
     </ul>
-
   </nav>
-
 
   <h1>COOKIE-ISM</h1>
 
-
   <h2>p5.js Sketch</h2>
 
- 
 
-<div>
-  <iframe 
-
-      src="https://editor.p5js.org/eva.z/full/PWMXp2xbj"
-      width="400"
-
-      height="400"
-
-      style="border: none;"
-
-    ></iframe>
-</div>
+  <iframe
+    src="https://editor.p5js.org/eva.z/full/PWMXp2xbj"
+    width="800"
+    height="500"
+    loading="lazy"
+    allowfullscreen>
+  </iframe>
 
   <h2>Description</h2>
 
   <p>
-
-    This is a 1–2 sentence description of Project 1. Describe what it does,
-
-    what you were exploring, or what you learned.
-
+    COOKIE-ISM is an interactive critique of manipulative consent systems and
+    dark UX patterns. Through sound, motion, and forced interaction logic,
+    the project exposes how control is disguised as choice in digital spaces.
   </p>
 
 </body>
-
 </html>
