--- a/about.html
+++ b/about.html
@@ -1,53 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <title>About Me – My Portfolio</title>
-    <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
-  <nav>
-    <ul>
 
-      <li><a href="index.html">Home</a></li>
+  <header id="top-header">
 
-      <li><a href="about.html">About</a></li>
+    <div class="header-top">
+      My Portfolio
+    </div>
 
-      <li><a href="extra.html">Extra</a></li>
+    <nav id="main-nav">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html" class="active-link">About</a></li>
+        <li><a href="extra.html">Extra</a></li>
+      </ul>
+    </nav>
 
-    </ul>
+  </header>
 
-  </nav>
+  <main>
 
+    <h1>About Me</h1>
 
-  <h1>About Me</h1>
+    <h2>Education</h2>
+    <p>Write a short paragraph about your education here.</p>
 
+    <h2>Hobbies & Interests</h2>
+    <p>Talk about what you like to do, art, coding, etc.</p>
 
-  <h2>Education</h2>
+    <h2>Career Goals</h2>
+    <p>Describe what kind of work you’re interested in or where you’d like to go.</p>
 
-  <p>Write a short paragraph about your education here.</p>
+    <h2>Reflections on Technology & Coding</h2>
+    <p>
+      Reflect on how you feel about technology, coding, the Internet,
+      and how they connect to your practice.
+    </p>
 
-
-  <h2>Hobbies & Interests</h2>
-
-  <p>Talk about what you like to do, art, coding, etc.</p>
-
-
-  <h2>Career Goals</h2>
-
-  <p>Describe what kind of work you’re interested in or where you’d like to go.</p>
-
-
-  <h2>Reflections on Technology & Coding</h2>
-
-  <p>
-
-    Reflect on how you feel about technology, coding, the Internet, and how they
-
-    connect to your practice.
-
-  </p>
+  </main>
 
 </body>
-
 </html>
