--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -28,15 +28,18 @@
 
     <h2>Projects</h2>
 
-    <ul>
-      <li><a href="project1.html">Lost and Found</a></li>
-      <li><a href="project2.html">Peko</a></li>
-      <li><a href="project3.html">Spine Disk Clock</a></li>
-      <li><a href="project4.html">Frankenstein's Zombiant</a></li>
-      <li><a href="project5.html">Hand Flowers</a></li>
-      <li><a href="project6.html">Anxiety Rings</a></li>
-      <li><a href="project7.html">COOKIE-ISM</a></li>
-    </ul>
+    <!-- ✅ Button-style project links -->
+    <div class="project-buttons">
+
+      <a href="project1.html" class="project-btn">Lost and Found</a>
+      <a href="project2.html" class="project-btn">Peko</a>
+      <a href="project3.html" class="project-btn">Spine Disk Clock</a>
+      <a href="project4.html" class="project-btn">Frankenstein's Zombiant</a>
+      <a href="project5.html" class="project-btn">Hand Flowers</a>
+      <a href="project6.html" class="project-btn">Anxiety Rings</a>
+      <a href="project7.html" class="project-btn">COOKIE-ISM</a>
+
+    </div>
 
   </main>
 
