--- a/extra.html
+++ b/extra.html
@@ -1,49 +1,44 @@
 <!DOCTYPE html>
-
 <html lang="en">
 
 <head>
-
   <meta charset="UTF-8" />
-
   <title>Extra – My Portfolio</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
 
-  <nav>
+  <header id="top-header">
 
-    <ul>
+    <div class="header-top">
+      My Portfolio
+    </div>
 
-      <li><a href="index.html">Home</a></li>
+    <nav id="main-nav">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="extra.html" class="active-link">Extra</a></li>
+      </ul>
+    </nav>
 
-      <li><a href="about.html">About</a></li>
-
-      <li><a href="extra.html">Extra</a></li>
-
-    </ul>
-
-  </nav>
-
-
-  <h1>Extra Page</h1>
+  </header>
 
 
-  <h2>Reflections</h2>
+  <main>
 
-  <p>
+    <h1>Extra Page</h1>
 
-    Use this page however you like. For example, write reflections on what
+    <h2>Reflections</h2>
 
-    you’ve learned in this class, show work from another class, or paste in a
+    <p>
+      Use this page however you like. For example, write reflections on what
+      you’ve learned in this class, show work from another class, or paste in a
+      simple CV.
+    </p>
 
-    simple CV.
-
-  </p>
+  </main>
 
 </body>
-
 </html>
-
-
