--- a/extra.html
+++ b/extra.html
@@ -9,23 +9,33 @@
 
 <body>
 
+  <!-- ✅ Global Neon Header -->
   <header id="top-header">
 
     <div class="header-top">
       My Portfolio
     </div>
 
+    <!-- ✅ Button-style Navigation -->
     <nav id="main-nav">
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="extra.html" class="active-link">Extra</a></li>
+        <li>
+          <a href="index.html" class="nav-btn">Home</a>
+        </li>
+
+        <li>
+          <a href="about.html" class="nav-btn">About</a>
+        </li>
+
+        <li>
+          <a href="extra.html" class="nav-btn active-link">Extra</a>
+        </li>
       </ul>
     </nav>
 
   </header>
 
-
+  <!-- ✅ Main Content Container -->
   <main>
 
     <h1>Extra Page</h1>
