--- a/project2.html
+++ b/project2.html
@@ -33,9 +33,16 @@
   <h2>Description</h2>
 
   <p>
-    This project explores playful interaction and character-driven animation
-    through p5.js. The sketch responds dynamically to user input, emphasizing
-    timing, motion, and personality.
+    My design process initially started with drawing of a circular oval head, wide eyes, eyebrows, a sprout for hair, ears, and a tongue licking upwards. 
+    My inspiration was from this popular japanese girl on the front of milky candy named Peko-Chan. Growing up, this brand was essential to my childhood. 
+    I also loved using this expression ":p or :q" in my daily life texting, so I thought I would try to incorporate those into this assignment. Ive discovered 
+    that during this process, I first made the 2D face by having a rough idea of where to place everything. I was intially going to have stars for the eyes, but 
+    settled for diamonds instead. The second step came harder, which was using the different elements such as user defining variables, mouseX, mouseY. I found out 
+    that in order to make everything move together as one, I had to individually do the points and define them, the incorporate it in relation to the main head's 
+    movement that follows the mouse. Additionally, I ran into some problems with the key and mouse press that would result in random colors. I struggled quite a bit 
+    because I kept on putting the function into draw when it was suppose to be outside, as well as issues with bracket placement that would result in my sketch not working
+    properly. Ive discovered, through this assignment, that because I didn't put the center element before I inputed all the elements and their coordinates, I was unable to 
+    change it so that it can expand throughout the page. Additionally, because I chose a face with more elements, I needed to code in relation so it moves together. 
   </p>
 
 </body>
