--- a/project3.html
+++ b/project3.html
@@ -33,9 +33,14 @@
   <h2>Description</h2>
 
   <p>
-    This generative clock visualizes time through the metaphor of spinal motion,
-    using rotation and rhythmic spacing to express the passage of hours, minutes,
-    and seconds in an anatomical form.
+   I named my clock Spine Disk, because the idea behind its creation was something I've learned a long time ago: that because of gravity, 
+    the height of humans change due to the disks in between our spines to be compressed throughout the day. That's why when we measure height,
+    we are a tiny bit taller when we just wake up in the morning versus when we go to bed. So, in my family, there is a habit that when it comes 
+    to measuring height growth, its always in the morning. Its something that I've always known, but it was only recently when I was in the process
+    of making this clock that I found out its not exactly common knowledge, seeing the surprise on my peers' faces when I told them what was my inspiration. 
+    My clock might alter the way I keep time because I definitely am more conscious about keeping track of what to use my hours for after I made this clock. 
+    Although its at the pace of seconds instead of actual human compression that might be a few milimeters off at the end of the day, it lingers on my brain 
+    and helps me not to procrasinate, as I become more aware of my body's changes throughout the day. 
   </p>
 
 </body>
