--- a/project4.html
+++ b/project4.html
@@ -33,8 +33,11 @@
   <h2>Description</h2>
 
   <p>
-    This project explores generative form and system-based motion through
-    p5.js, focusing on how simple rules can produce complex visual behavior.
+The Zombiant comes from a peashooter head and got zombified when he was fallen in battle, he gained the power to change one part of 
+his body after he stumbled upon a wizard's grave. As hes on his last breath he turned to grab anything that was alive beside him, 
+and it was actually a chicken who's wondered too far. He can only replace the part of his body that is the same part as the living being. 
+To hide the part where it has the drastic color changes, he took an abandoned lifeguard tube. It also helps him to go into other territory
+like water, as the tube helps him float even if he has just one limb. 
   </p>
 
 </body>
