--- a/project5.html
+++ b/project5.html
@@ -32,9 +32,21 @@
   <h2>Description</h2>
 
   <p>
-    This project explores organic growth and gesture-driven interaction through
-    a floral metaphor, translating hand motion into generative blooming forms
-    using p5.js.
+    My concept for this project was to create a custom print for families. 
+    This print design is unique, one of a kind, and can be hung in a family home as a painting 
+    or on clothing as a new matching clothes. It can also be used for couples too. But the initial design
+    was for families with young children, because of their small hands, the small flowers could be a way 
+    of remembering a child's growth, alongside their parents' hands. I ran into numerous challenges doing
+    this project. As I was insistent on utilizing the motion capture function, I realized that I had to create 
+    two canvases, one for the camera and one for the print canvas, so viewers could see themselves performing the task.
+    And when I found the p5js reference for multiple canvases, the website kept crashing as a result because the code kept 
+    trying to run before everything was load. And then finally when the canvas 1 was working, canvas 2's nightmare began.
+    Because of the specific vision I had in mind, I actually wrote several versions of the sketch. The first edition the 
+    triangle did rotate and change color, but there was only one and it didn't layer. The second one the screen would refresh
+    so it paints over the flower already drawn. The third one had rotating triangles with layers but it would only follow 
+    one hand. Long story short, I had a lot of trouble because of typos, calculation errors, etc. I would say I designed 
+    this optical illusion to be utilized in a free browser/app that will result in a pdf/image for prints or directly imported
+    into a graphic design for wearables. 
   </p>
 
 </body>
