--- a/project6.html
+++ b/project6.html
@@ -32,9 +32,12 @@
   <h2>Description</h2>
 
   <p>
-    This project visualizes nervous energy and repetitive motion through
-    interactive, concentric behaviors in p5.js, mapping subtle user input
-    to cycles of tension and release.
+   My Data Portrait is me recording my personal habit of fidgeting with my rings when I am anxious. 
+    Its become a habit of mine instead of scratching my hands or nails that causes actual damage, 
+    I wear rings to get rid of the bad habit. I tracked a week worth of the 4 rings I wear on a daily, 
+    and which ones I fidget with during what day. The instruction for the viewers is to see the color bars on 
+    each finger. The viweers click on each of the days of the week at the top and it shows the amount of times 
+    and the rings that I fidgeted with. 
   </p>
 
 </body>
