--- a/project7.html
+++ b/project7.html
@@ -33,9 +33,26 @@
   <h2>Description</h2>
 
   <p>
-    COOKIE-ISM is an interactive critique of manipulative consent systems and
-    dark UX patterns. Through sound, motion, and forced interaction logic,
-    the project exposes how control is disguised as choice in digital spaces.
+  My idea was to combine my AI ULEC paper with this game project. “Accept All Cookies”. 
+  That was a term that is hurled at every website user in the 21st century. Cookies essentially 
+  are “small files of information that a web server generates and sent to a web browser…then stored
+  for a predetermined period of time, or for the length of a user’s session on a website. They attach
+  the relevant cookies to any future requests the user makes of the web server.” 1 By tracking, the
+  website remembers the interests and information of that user and modifies its contents accordingly. 
+  Many users don't even realize the extent of the private information they allow cookies to track due 
+  to the intentional UX design of the pop-up. I personally relate to this as well. Before my research, 
+  I had clicked on “Accept Cookies” on almost every website I visited. I had attempted to read the terms
+  and conditions occasionally, but without extensive knowledge of the topic, I would resort to going with the
+  convenient option of accepting all cookies. In reality, this habitual acceptance was not of the user’s free
+  will, but instead the result of intentional UX/UI decisions that are designed to guide the user using the human
+  tendency to choose shortcuts, and lack patience, resulting in unknowingly choosing compliance while being under
+  the pretense they had the freedom of choice. I coin this phenomenon as cookie-ism: the normalization of passive, 
+  performative consent designed by utilizing human behavioral psychology to use as a loophole for consent online. 
+  So I decided to make this game that is a play on how normalized the pop ups and cookies today because it plays on
+  human's habits of relying on convenience. The main objective of the game is to find the “Deny All Cookies” button, 
+  while the system tries to persuade the user through manipulative language, utilizing deceptive patterns such as
+  obstruction and nagging. I will be utilizing AI statements in my code to convince the user to click the
+  “Agree All Cookies” button.
   </p>
 
 </body>
