--- a/project2.html
+++ b/project2.html
@@ -20,7 +20,7 @@
   <h1>Peko</h1>
 
   <h2>p5.js Sketch</h2>
-
+<div class="sketch-row">
 
   <iframe
     src="https://editor.p5js.org/eva.z/full/LV4rLd_jh"
@@ -28,7 +28,7 @@
     height="400"
  
   </iframe>
-
+<div class="sketch-description">
   <h2>Description</h2>
 
   <p>
