--- a/project1.html
+++ b/project1.html
@@ -21,7 +21,6 @@
 
   <h2>p5.js Sketch</h2>
 
-  <!-- ✅ Your live p5.js sketch -->
   <iframe
     src="https://editor.p5js.org/eva.z/full/S8nB42KBM"
     width="400"
@@ -33,11 +32,7 @@
   <h2>Description</h2>
 
   <p>
-    This project is a visualization of my classmate Mannat's description of Hawker's Street. The visual description she told me was "right next my house theres a place called Hawker's Street. 
-    It's basically a bunch of little food stalls lined up along the side of the street. Theres tables and benches set up all along in front of the stalls/shops.
-    Theres a gateway in the center, beside the gate, spread out along the divider between the sidewalk and the seating area it says I <3 HAWKER'S STREET in big letters.
-      When you enter, the space is lit up with string lights, hang all across the top and all the individual shops have their own LED signs and colorful banners.
-      You get everything from coffees and dessert to kebabs and salads.
+This project is a visualization of my classmate Mannat's description of Hawker's Street. The visual description she told me was "right next my house theres a place called Hawker's Street. It's basically a bunch of little food stalls lined up along the side of the street. Theres tables and benches set up all along in front of the stalls/shops. Theres a gateway in the center, beside the gate, spread out along the divider between the sidewalk and the seating area it says I <3 HAWKER'S STREET in big letters. When you enter, the space is lit up with string lights, hang all across the top and all the individual shops have their own LED signs and colorful banners. You get everything from coffees and dessert to kebabs and salads.
   </p>
 
 </body>
