--- a/project1.html
+++ b/project1.html
@@ -9,7 +9,7 @@
 
 <body>
 
-  <nav>
+     <nav id="main-nav">
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
