--- a/project2.html
+++ b/project2.html
@@ -9,14 +9,30 @@
 
 <body>
 
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="extra.html">Extra</a></li>
-    </ul>
-  </nav>
+  <header id="top-header">
 
+    <div class="header-top">
+      My Portfolio
+    </div>
+
+
+    <nav id="main-nav">
+      <ul>
+        <li>
+          <a href="index.html" class="nav-btn">Home</a>
+        </li>
+
+        <li>
+          <a href="about.html" class="nav-btn">About</a>
+        </li>
+
+        <li>
+          <a href="extra.html" class="nav-btn active-link">Extra</a>
+        </li>
+      </ul>
+    </nav>
+
+  </header>
   <h1>Peko</h1>
 
   <h2>p5.js Sketch</h2>
