--- a/project4.html
+++ b/project4.html
@@ -8,14 +8,30 @@
 </head>
 
 <body>
+<header id="top-header">
 
-  <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="extra.html">Extra</a></li>
-    </ul>
-  </nav>
+    <div class="header-top">
+      My Portfolio
+    </div>
+
+
+    <nav id="main-nav">
+      <ul>
+        <li>
+          <a href="index.html" class="nav-btn">Home</a>
+        </li>
+
+        <li>
+          <a href="about.html" class="nav-btn">About</a>
+        </li>
+
+        <li>
+          <a href="extra.html" class="nav-btn active-link">Extra</a>
+        </li>
+      </ul>
+    </nav>
+
+  </header>
 
   <h1>Project 4 Title</h1>
 
