--- a/project4.html
+++ b/project4.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <title>Project 4 – My Portfolio</title>
   <link rel="stylesheet" href="style.css" />
+   <link rel="stylesheet href="project.css"/>
 </head>
 
 <body>
