--- a/extra.html
+++ b/extra.html
@@ -49,6 +49,14 @@
     </p>
 
   </main>
-
+ <footer>
+        <p><small>2025 Yifan Eva Zhang. All rights reserved.</small></p>
+        <address>
+         <a href="mailto:yifanezhang@gmail.com">Contact Me</a><br>
+Social Media: <br>
+<a href="https://www.instagram.com/_ezzzart_" target="ext-links">Instagram</a><br>
+<a href="https://www.linkedin.com/in/yifan-zhang-72b241290/" target="ext-links">LinkedIn</a><br>
+        </address>
+    </footer>
 </body>
 </html>
