--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@ Social Media: <br>
 <a href="https://www.instagram.com/_ezzzart_" target="ext-links">Instagram</a><br>
 <a href="https://www.linkedin.com/in/yifan-zhang-72b241290/" target="ext-links">LinkedIn</a><br>
         </address>
-    </footer>
+  <small>3D model used under Fab Standard License, original creator of 3D model Multicore AI</small>
+  </footer>
 
 </body>
 </html>
