--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </header>
 
   <main>
-
+<div id="circuit3D"></div>
     <h2>Projects</h2>
 
    <div class="project-buttons">
@@ -42,7 +42,7 @@
 
 
   </main>
-
+<script type="module" src="js/main.js"></script>
   <footer>
         <p><small>2025 Yifan Eva Zhang. All rights reserved.</small></p>
         <address>
