--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
     <h1>About Me</h1>
 
     <h2>Education</h2>
-    <p>Write a short paragraph about your education here.</p>
+    <p>I came to the US after moving from Canada in the 6th grade, and contined normal public middle and highschool education. During this time I have always kept art as more of a hobby, and didn't even consider design. Instead I was on track for premed in my IB Diploma program but switched to plan b in my sophmore year and focused on creating my portfolio. During this period I have been receiving teachings from a local studio art teacher once every week, but after </p>
 
     <h2>Hobbies & Interests</h2>
     <p>Talk about what you like to do, art, coding, etc.</p>
