--- a/index.html
+++ b/index.html
@@ -53,6 +53,6 @@ Social Media: <br>
         </address>
   <small>3D model used under Fab Standard License, original creator of 3D model Multicore AI</small>
   </footer>
-<script type="module" src="js/main.js"></script>
+<script type="module" src="main.js"></script>
 </body>
 </html>
