--- a/index.html
+++ b/index.html
@@ -25,20 +25,19 @@
   </header>
 
   <main>
+    <section id="circuit-hub">
 <div id="circuit3D"></div>
-    <h2>Projects</h2>
 
-   <div class="project-buttons">
 
-  <a href="project1.html" class="project-btn">Lost and Found</a>
-  <a href="project2.html" class="project-btn">Peko</a>
-  <a href="project3.html" class="project-btn">Spine Disk Clock</a>
-  <a href="project4.html" class="project-btn">Frankenstein's Zombiant</a>
-  <a href="project5.html" class="project-btn">Hand Flowers</a>
-  <a href="project6.html" class="project-btn">Anxiety Rings</a>
-  <a href="project7.html" class="project-btn">COOKIE-ISM</a>
+  <a href="project1.html" class="circuit-link left">Lost and Found</a>
+  <a href="project2.html" class="circuit-link left">Peko</a>
+  <a href="project3.html" class="circuit-link right">Spine Disk Clock</a>
+  <a href="project4.html" class="circuit-link right">Frankenstein's Zombiant</a>
+  <a href="project5.html" class="circuit-link bottom">Hand Flowers</a>
+  <a href="project6.html" class="circuit-link bottom">Anxiety Rings</a>
+  <a href="project7.html" class="circuit-link top">COOKIE-ISM</a>
 
-</div>
+    </section>
 
 
   </main>
