--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section id="projectbtns">
 <div id="circuit3D"></div>
 
-
+<div class="project-buttons">
   <a href="project1.html" class="project-btn">Lost and Found</a>
   <a href="project2.html" class="project-btn">Peko</a>
   <a href="project3.html" class="project-btn">Spine Disk Clock</a>
@@ -36,7 +36,7 @@
   <a href="project5.html" class="project-btn">Hand Flowers</a>
   <a href="project6.html" class="project-btn">Anxiety Rings</a>
   <a href="project7.html" class="project-btn">COOKIE-ISM</a>
-
+</div>
     </section>
 
 
