--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <main>
     <section id="projectbtns">
-<div id="circuit3D"></div>
+<div class="projects-layout">
 
 <div class="project-buttons">
   <a href="project1.html" class="project-btn">Lost and Found</a>
@@ -36,6 +36,8 @@
   <a href="project5.html" class="project-btn">Hand Flowers</a>
   <a href="project6.html" class="project-btn">Anxiety Rings</a>
   <a href="project7.html" class="project-btn">COOKIE-ISM</a>
+</div>
+  <div id="circuit3D"></div>
 </div>
     </section>
 
