--- a/about.html
+++ b/about.html
@@ -33,15 +33,14 @@
     <p>I came to the US after moving from Canada in the 6th grade, and contined normal public middle and highschool education. During this time I have always kept art as more of a hobby, and didn't even consider design. Instead I was on track for premed in my IB Diploma program but switched to plan b in my sophmore year and focused on creating my portfolio. During this period I have been receiving teachings from a local studio art teacher once every week, but after </p>
 
     <h2>Hobbies & Interests</h2>
-    <p>Talk about what you like to do, art, coding, etc.</p>
+    <p>In my spare time, I still use my fine art origins and utilize my skills and experimented further with wood, acrylic plexiglass, plaster, and 3D printing. Within the digital world, I am particularly interested in digital product design and hoping to go into the UX UI field.</p>
 
     <h2>Career Goals</h2>
-    <p>Describe what kind of work you’re interested in or where you’d like to go.</p>
+    <p>Right now I am just trying to push out portfolio pieces, and build a website to send out to internships, but I do hope that eventually I will be able to work in corporate and perhaps physical computing.</p>
 
     <h2>Reflections on Technology & Coding</h2>
     <p>
-      Reflect on how you feel about technology, coding, the Internet,
-      and how they connect to your practice.
+      Within my artworks, I always strive to make the main element of the piece --- storytelling. No matter what project or exhibition it is, for every single art piece there needed to be a meaning, a reason for why it was created : to make the audience question, to spark debate, to feel. I am consistently inspired by the human anatomy itself, questioning the role of technology in human evolution. I derive my inspiration from elements in my past. For example, the fairytales that was read to me as a child birthed an entire series, purely focusing on twisting the old tales to create new perspectives that often questions if there were other solutions or ways to approach a singular topic. For technology and code, I am particularly intrigued by interaction design, digital product design, and human-computer interaction. In addition, currently I also have work that explore human augmentation and the synthetic biology. 
     </p>
 
   </main>
