--- a/extra.html
+++ b/extra.html
@@ -43,9 +43,7 @@
     <h2>Reflections</h2>
 
     <p>
-      Use this page however you like. For example, write reflections on what
-      you’ve learned in this class, show work from another class, or paste in a
-      simple CV.
+      <a href="http://b.parsons.edu/~zhane249/" target="ext-links">My Fine Art Portfolio</a>
     </p>
 
   </main>
