--- a/project1.html
+++ b/project1.html
@@ -6,6 +6,13 @@
   <title>Lost and Found – My Portfolio</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet href="project.css"/>
+
+
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/p5.js"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/addons/p5.sound.min.js"></script>
+
+
 </head>
 
 <body>
@@ -39,13 +46,7 @@
 
   <h2>p5.js Sketch</h2>
 
-  <iframe
-    src="https://editor.p5js.org/eva.z/full/S8nB42KBM"
-    width="400"
-    height="400"
-    loading="lazy"
-    allowfullscreen>
-  </iframe>
+  <div id="sketch-container"></div>
 
   <h2>Description</h2>
 
