--- a/project2.html
+++ b/project2.html
@@ -60,6 +60,6 @@
     properly. Ive discovered, through this assignment, that because I didn't put the center element before I inputed all the elements and their coordinates, I was unable to 
     change it so that it can expand throughout the page. Additionally, because I chose a face with more elements, I needed to code in relation so it moves together. 
   </p>
-
+<script src="project2.js"></script>
 </body>
 </html>
