--- a/project2.html
+++ b/project2.html
@@ -6,6 +6,9 @@
   <title>Peko – My Portfolio</title>
   <link rel="stylesheet" href="style.css" />
    <link rel="stylesheet href="project.css"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/p5.js"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/addons/p5.sound.min.js"></script>
 </head>
 
 <body>
@@ -37,15 +40,7 @@
   <h1>Peko</h1>
 
   <h2>p5.js Sketch</h2>
-<div class="sketch-row">
-
-  <iframe
-    src="https://editor.p5js.org/eva.z/full/LV4rLd_jh"
-    width="400"
-    height="400"
- 
-  </iframe>
-<div class="sketch-description">
+<div id="sketch-container"></div>
   <h2>Description</h2>
 
   <p>
