--- a/project3.html
+++ b/project3.html
@@ -6,6 +6,10 @@
   <title>Spine Disk Clock – My Portfolio</title>
   <link rel="stylesheet" href="style.css" />
    <link rel="stylesheet href="project.css"/>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/p5.js"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/addons/p5.sound.min.js"></script>
 </head>
 
 <body>
@@ -38,14 +42,7 @@
 
   <h2>p5.js Sketch</h2>
 
-  
-  <iframe
-    src="https://editor.p5js.org/eva.z/full/Vsp9BVKVW"
-    width="600"
-    height="700"
-    loading="lazy"
-    allowfullscreen>
-  </iframe>
+<div id="sketch-container"></div>
 
   <h2>Description</h2>
 
