--- a/project3.html
+++ b/project3.html
@@ -56,6 +56,6 @@
     Although its at the pace of seconds instead of actual human compression that might be a few milimeters off at the end of the day, it lingers on my brain 
     and helps me not to procrasinate, as I become more aware of my body's changes throughout the day. 
   </p>
-
+<script src="project3.js"></script>
 </body>
 </html>
