--- a/project4.html
+++ b/project4.html
@@ -6,6 +6,9 @@
   <title>Project 4 – My Portfolio</title>
   <link rel="stylesheet" href="style.css" />
    <link rel="stylesheet href="project.css"/>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/p5.js"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/addons/p5.sound.min.js"></script>
 </head>
 
 <body>
@@ -39,13 +42,7 @@
   <h2>p5.js Sketch</h2>
 
 
-  <iframe
-    src="https://editor.p5js.org/eva.z/full/uBoKeDpuQ"
-    width="400"
-    height="600"
-    loading="lazy"
-    allowfullscreen>
-  </iframe>
+<div id="sketch-container"></div>
 
   <h2>Description</h2>
 
@@ -56,6 +53,6 @@ and it was actually a chicken who's wondered too far. He can only replace the pa
 To hide the part where it has the drastic color changes, he took an abandoned lifeguard tube. It also helps him to go into other territory
 like water, as the tube helps him float even if he has just one limb. 
   </p>
-
+<script src="project4.js"></script>
 </body>
 </html>
