--- a/project5.html
+++ b/project5.html
@@ -6,6 +6,11 @@
   <title>Hand Flowers – My Portfolio</title>
   <link rel="stylesheet" href="style.css" />
    <link rel="stylesheet href="project.css"/>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/p5.js"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/addons/p5.sound.min.js"></script>
+
+
 </head>
 
 <body>
@@ -39,13 +44,7 @@
 
   <h2>p5.js Sketch</h2>
 
-  <iframe
-    src="https://editor.p5js.org/eva.z/full/gjrWXcMbA"
-    width="600"
-    height="1200"
-    loading="lazy"
-    allowfullscreen>
-  </iframe>
+</div id="sketch-container"></div>
 
   <h2>Description</h2>
 
@@ -66,6 +65,6 @@
     this optical illusion to be utilized in a free browser/app that will result in a pdf/image for prints or directly imported
     into a graphic design for wearables. 
   </p>
-
+<script src="project5.js"></script>
 </body>
 </html>
