--- a/project5.html
+++ b/project5.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8" />
   <title>Hand Flowers – My Portfolio</title>
   <link rel="stylesheet" href="style.css" />
-   <link rel="stylesheet href="project.css"/>
+   <link rel="stylesheet" href="project.css"/>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/p5.js"></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/addons/p5.sound.min.js"></script>
-
+<script src="https://cdn.jsdelivr.net/npm/ml5@latest/dist/ml5.min.js"></script>
 
 </head>
 
@@ -44,7 +44,8 @@
 
   <h2>p5.js Sketch</h2>
 
-</div id="sketch-container"></div>
+<div id="canvas1"></div>
+  <div id-"canvas2"</div>
 
   <h2>Description</h2>
 
