--- a/project5.html
+++ b/project5.html
@@ -44,10 +44,10 @@
   <h1>Hand Flowers</h1>
 
   <h2>p5.js Sketch</h2>
-
+<div id="canvas-row">
 <div id="canvas1"></div>
-  <div id-"canvas2"</div>
-
+  <div id="canvas2"></div>
+</div>
   <h2>Description</h2>
 
   <p>
