--- a/physical.html
+++ b/physical.html
@@ -1,1 +1,22 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<main>
+<div class="carousel">
+  <div class="slot1"></div>
+  <div class="slot2"></div>
+  <div class="slot3"></div>
+  <div class="slot4"></div>
+  <div class="slot5"></div>
+</div>
+</main>
+    <footer>
+        <p><small>2025 Yifan Eva Zhang. All rights reserved.</small></p>
+        <address>
+         <a href="mailto:yifanezhang@gmail.com">Contact Me</a><br>
+Social Media: <br>
+<a href="https://www.instagram.com/_ezzzart_" target="ext-links">Instagram</a><br>
+<a href="https://www.linkedin.com/in/yifan-zhang-72b241290/" target="ext-links">LinkedIn</a><br>
+        </address>
+  <small>3D model used under Fab Standard License, original creator of 3D model Multicore AI</small>
+  </footer>
+</html>
