--- a/physical.html
+++ b/physical.html
@@ -1,14 +1,26 @@
+
+<!-- the following code is referenced from this youtube tutorial https://www.youtube.com/watch?v=w9OpXh3K6YI and modified to fit my design -->
+
 <!DOCTYPE html>
 <html lang="en">
-<main>
-<div class="carousel">
-  <div class="slot1"></div>
-  <div class="slot2"></div>
-  <div class="slot3"></div>
-  <div class="slot4"></div>
-  <div class="slot5"></div>
-</div>
-</main>
+  <head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="wide=device-width, initial-scale=1.0/>
+      <title>Cool Physical Computation Deck!</title>
+
+    <style>
+      @keyframes shimmer{
+      }
+      </style>
+  </head>
+  <body>
+    <div class="container">
+
+
+      
+  </body>
+    </style>
+  </head>
     <footer>
         <p><small>2025 Yifan Eva Zhang. All rights reserved.</small></p>
         <address>
